<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jjkj.guoyouchao.fangyou_food.Activitys.EmailNumberRegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="@dimen/input_text_high"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="@dimen/margin_top_high"
        android:textSize="@dimen/btn_text_fontsize"
        android:hint="@string/please_input_email_number"
        android:id="@+id/emailNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/send_phone_code" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_verification_code"
        android:id="@+id/send_phone_code"
        android:layout_alignBottom="@+id/emailNumber"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:textSize="@dimen/btn_text_fontsize"
        android:hint="@string/please_input_email_verification_code"
        android:id="@+id/input_email_code"
        android:layout_below="@+id/send_phone_code"
        android:layout_marginTop="@dimen/margin_top_high"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/send_phone_code" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_user"
        android:id="@+id/email_register_btn"
        android:textSize="@dimen/btn_text_fontsize"
        android:layout_marginTop="@dimen/register_margin_top_high"
        android:layout_below="@+id/input_email_code"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_register_user"
        android:id="@+id/phoneregister"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
